# queue-kata

./: .env  .env.docker  .env.local  .env.sqlx  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  sqlx-data.json
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: db.rs  error.rs  lib.rs  utils.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: health_check.rs  lib.rs  router.rs  server.rs  tracing.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  router.rs  task.rs
crates/scheduler/src/task/: model.rs
docker/: db.Dockerfile  full.Dockerfile  pg_cron_init.sh
migrations/: 20221209232338_tasks.sql  20221211193302_task_indexes.sql  20221211212336_fix_type.sql  20221224095752_check_constraints_instead_enums_v1.sql  20221224095904_check_constraints_instead_enums_v2.sql  20221226223254_optimizations_for_queue.sql  20221227005050_task_queue.sql  20221229211452_schemas.sql  20221229212320_core_tables.sql  20221231184854_queue.sql  20221231202900_scheduler_views.sql  20230101191801_fixes.sql  20230624170837_schemas.sql  20230624173017_task_table.sql  20230624173146_job_table.sql  20230624173424_queue_table.sql  20230624173848_table_partitioning.sql  20230624190630_queue_logic.sql  20230624193014_init_cron.sql
migrations_draft/: 20221227174411_materialized_view_for_task_list.sql
migrations_internal/: 20230624170837_bootstrap.sql  20230624173848_table_partitioning.sql  20230625122244_cron.sql
migrations_proposals/: audit.sql
migrations_vol1/: 20221225105620_new_task_states_v1.sql  20221225112520_new_task_states_v2.sql
migrations_vol2/: 20221229221754_partitioning_logic.sql  20230101145324_partitioning_logic.sql  20230101145536_pg_cron.sql  20230101212600_cron_populate_queue.sql
tests/: health.hurl  request-id-propagation.hurl  task.hurl
