[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
http-server = { path = "./crates/http-server" }

anyhow = "^1"
axum = { version = "^0", features = ["headers"] }
futures = "^0"
hyper = { version = "^0", features = ["full"] }
tokio = { version = "^1", features = ["full", "tracing"] }
tower = "^0"
tower-http = { version = "^0", features = ["trace", "set-header", "request-id"] }
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter"] }
serde = { version = "^1",  features = ["derive"] }
