[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
common = { path = "./crates/common" }
http-server = { path = "./crates/http-server" }
scheduler = { path = "./crates/scheduler" }

anyhow = "^1"
axum = { version = "^0", features = ["headers"] }
chrono = { version = "^0", features = ["serde"] }
futures = "^0"
hyper = { version = "^0", features = ["full"] }
strum = { version = "^0", features = ["derive"] }
thiserror = "^1"
tokio = { version = "^1", features = ["full", "tracing"] }
tower = "^0"
tower-http = { version = "^0", features = ["trace", "set-header", "request-id"] }
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter"] }
serde = { version = "^1",  features = ["derive"] }
serde_json = { version = "^1", features = ["preserve_order"] }
sqlx = { version = "^0", features = [
    "chrono",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
ulid = { version = "^1", features = ["uuid"] }
uuid = { version = "^1", features = ["serde"] }
