[package]
name = "scheduler-api"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
http-server.workspace = true
scheduler.workspace = true

anyhow.workspace = true
axum.workspace = true
hyper.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
futures.workspace = true
