[package]
name = "http-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
hyper.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
futures.workspace = true
