[package]
name = "http-server"
version.workspace = true
edition.workspace = true

[dependencies]
svix-ksuid = { git = "https://github.com/svix/rust-ksuid", rev = "16468002c4da26932ca1004fcae190f543565b78", features = ["serde"] }

anyhow.workspace = true
axum.workspace = true
futures.workspace = true
hyper.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
serde.workspace = true
