[package]
name = "http-server"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
hyper.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
ulid.workspace = true
