[package]
name = "scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true

axum.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true
